# Chungus

./: .gitignore  README.md  manage.py  pyproject.toml  tests.py
Chungus/: asgi.py  settings.py  urls.py  wsgi.py
Dashboard/: api_views.py  urls.py  views.py
Dashboard/static/: global.css
Dashboard/templates/Dashboard/: api_docs.html  base.html  dashboard.html  index.html
LLM/: admin.py  apps.py  auth.py  models.py  tests.py  urls.py  utils.py  views.py
LLM/management/commands/: warmup_models.py
LLM/migrations/: 0001_initial.py  0002_model_huggingface_token.py  0003_model_ollama_base_url_model_provider.py  0004_model_alwayswarm.py  0005_model_model_type.py  0006_llmrequest_min_p_llmrequest_presence_penalty_and_more.py  0007_model_default_min_p_model_default_presence_penalty_and_more.py  0008_alter_model_default_min_p_and_more.py  0009_llmrequest_thinking_model_thinking_mode.py  0010_thinking_mode_levels.py  0011_model_is_default.py
crypto/: rigel  setup.sh
crypto/rigel-1.22.3-linux/: dual-abel.sh  dual-cfx.sh  dual-erg.sh  dual-hyp.sh  dual-iron.sh  dual-kls.sh  etc.sh  quai.sh  xtm.sh  zano.sh
folding@home/: setup.sh
setup/: folding.sh
staticfiles/: global.css
