[project]
name = "chungus"
version = "0.1.0"
description = ""
authors = [
    {name = "AntoDono",email = "anthony20151128@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "vllm (>=0.11.0,<0.12.0)",
    "pytest (>=8.0.0,<9.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "ollama (>=0.1.0,<1.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false